<resources>
    <string name="app_name">MTKDownload</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="up">Up</string>
    <string name="select">Select</string>
    <string name="current_folder_n_this_is_a_long_path_to_test_if_this_will_span_multiple_lines">Current folder: \n/THis/is/a/long/path/to/test/if/this/will/span/multiple/lines</string>

    <string name="GPS_device">GPS device</string>
    <string name="preferences">Preferences</string>
    <string name="Sel_GPS">Select your GPS device</string>
    <string name="Create_GPX1">Create GPX file</string>
    <string name="Create_GPX2">Create GPX file after download</string>
    <string name="Create_deb">Create debug file</string>
    <string name="trk1">Write one trk section</string>
    <string name="trk2">Write only one trk section in the gpx file</string>
    <string name="Chunk1">Chunk size</string>
    <string name="Chunk2">Size of chunk to download</string>
    <string name="CMem2">Size of GPS memory</string>
    <string name="CMem1">Memory size</string>
    <string name="Over1">Overwrite mode</string>
    <string name="Over2">Choose what happens for GPS in OVERWRITE mode</string>
    <string name="path1">Directory Name for Save </string>
    <string name="path2">The location the exported data is saved to</string>
    <string name="Main">Main</string>

    <string name="hei_start">HOT-Start</string>
    <string name="warmstart">Warm-Start</string>
    <string name="kaltstart">Cold-Start</string>
    <string name="ende">End</string>
    <string name="del_log">Delete LOG from GPS Receiver</string>
    <string name="load_log">Load LOG from GPS Receiver</string>
    <string name="action_GPS">GPS Einstellungen</string>
    <string name="action_Help">Help</string>
    <string name="action_CR">About</string>
    <!-- Sync Preferences -->
    <string name="title_activity_preference" translatable="false">PreferenceActivity</string>
    <string name="Path_does_not_exist">Path does not exist or cannot be read</string>
    <string name="New_Export_Path">New Export Path:\\n</string>
    <string name="No_Changes_Made">No Changes Made</string>
    <string name="Bluetooth_na">Bluetooth is not available</string>
    <string name="perm_req">Permission required</string>
    <string name="about_mtkdownload">About MTKDownload</string>
    <string name="help_mtkdownload">Help for MTKDownload</string>
    <string name="how_to_use">How to use</string>
    <string name="email_website" translatable="false">Email: Android@Dimitri-Junker.de\nPersonal Website: http://www.dimitri-junker.de\n</string>
    <string name="help0">MTKDownload allows you to download GPS logs from certain GPS recorders (Transystem 747A+ and other MTK recorders) via Bluetooth.\n</string>
    <string name="_1" translatable="false">1)</string>
    <string name="help1">Pair your GPS device in the Android bluetooth settings.</string>
    <string name="_2" translatable="false">2)</string>
    <string name="help2">Go to the preferences of MTKDownload and select your GPS device.</string>
    <string name="_3" translatable="false">3)</string>
    <string name="_4" translatable="false">4)</string>
    <string name="_5" translatable="false">5)</string>
    <string name="_6" translatable="false">6)</string>
    <string name="help3">Choose if a GPX file should be created</string>
    <string name="help4">Press the \'Load log...\' button in the main screen to download the log file to your internal storage.</string>
    <string name="help5">Press the \'Del log...\' button to clear the GPS devices memory.</string>
    <string name="help6">Download the log files and/or (if activated in the prefferences) the gpx file to your computer.</string>
    <string name="help7">Use BT747 to transform the result into other formats</string>
    <string name="help8">More info .see: http://www.dimitri-junker.de/eng/html/mtkdownload.html</string>
    <string name="help9">You can also restart the logger from the main screen and use \'GPS Settings\' to determine how the logger should behave when the memory is full</string>
    <string name="when_memory_full_overwrite_old_logs">![CDATA[When memory full => STOP recording]]</string>
    <string name="when_memory_full_stop_recording">![CDATA[When memory full => OVERWRITE old logs]]</string>
    <string name="logs">Logs</string>
    <string name="neustarts">Start</string>
    <string name="endeB">End</string>
    <string name="Downloading">Downloading log from GPS receiver</string>
    <string name="Write_Ext_Perm">Write External Starage Permision is needed to copy Logfile.</string>
    <string name="File_not_saved">File not saved \\n</string>
    <string name="Restart1">Restart Logger</string>
    <string name="Restart2">Press Continue after swichtin Logger Off and on or abort</string>
    <string name="weiter">continue</string>
    <string name="abort">abort</string>
    <string name="Convert">Converting GPS log to GPX file</string>
    <string name="menu_ende">End</string>
    <string name="menu_GPS">GPS Settings</string>
    <string name="Delete_log_Q">Delete log from GPS receiver?</string>
    <string name="Are_you_sure">Are you sure?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Del_log">Deleting log from GPS receiver. Please wait...</string>
    <string name="meldungen">Messages</string>
    <string name="restart">Performing restart. Please wait...</string>
    <string name="chgGps">Changing GPS settings. Please wait...</string>
    <string name="noPairedBT">no paired Bluetooth devices available</string>
    <string name="cancelDL">Trying to cancel the download thread</string>
    <string name="cancelCV">Trying to cancel the conversion thread</string>
    <string name="helpFile">file:///android_asset/mtkdownload_en.html</string>


</resources>