<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    			  android:layout_width="fill_parent"
    			  android:layout_height="fill_parent">
	<LinearLayout android:orientation="vertical"
    			  android:layout_width="fill_parent"
    			  android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/about_mtkdownload"
			android:textSize="24sp" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/mtkdownload_allows_you_to_download_gps_logs_from_certain_gps_recorders_transystem_747a_and_other_mtk_recorders_via_bluetooth_n"
			/>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:autoLink="all"
			android:text="@string/email_android_dimitri_junker_de_npersonal_website_http_www_dimitri_junker_de_n"
			/>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/how_to_use"
			android:layout_marginBottom="10dp"
			android:textSize="20sp" />
		<TableLayout
			android:layout_width="wrap_content" android:layout_height="wrap_content">
			<TableRow>
				<TextView android:layout_column="1" android:text="@string/_1"></TextView>
				<TextView android:layout_column="2" android:layout_width="wrap_content"
					android:text="@string/help1"></TextView>
			</TableRow>
			<TableRow>
				<TextView android:layout_column="1" android:text="@string/_2"></TextView>
				<TextView android:layout_column="2" android:layout_width="wrap_content"
					android:text="@string/help2"></TextView>
			</TableRow>
			<TableRow>
				<TextView android:layout_column="1" android:text="@string/_3"></TextView>
				<TextView android:layout_column="2" android:layout_width="wrap_content"
					android:text="@string/help3"></TextView>
			</TableRow>
			<TableRow>
				<TextView android:layout_column="1" android:text="@string/_4"></TextView>
				<TextView android:layout_column="2" android:layout_width="wrap_content"
					android:text="@string/help4"></TextView>
			</TableRow>
			<TableRow>
				<TextView android:layout_column="1" android:text="5)"></TextView>
				<TextView android:layout_column="2" android:layout_width="wrap_content"
					android:text="@string/help5"></TextView>
			</TableRow>
			<TableRow>
				<TextView android:layout_column="1" android:text="6)"></TextView>
				<TextView android:layout_column="2" android:layout_width="wrap_content"
					android:text="@string/help6"></TextView>
			</TableRow>
			<TableRow>
				<TextView android:layout_column="1" android:text="7)"></TextView>
				<TextView android:layout_column="2" android:layout_width="wrap_content"
					android:text="@string/help7"></TextView>
			</TableRow>
			<TableRow>
				<TextView android:layout_column="1" android:text="8)"></TextView>
				<TextView android:layout_column="2" android:layout_width="wrap_content"
					android:autoLink="all"
					android:text="@string/help8"></TextView>
			</TableRow>
		</TableLayout>
	</LinearLayout>
</ScrollView>

