<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/titleLog"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="#2ebadc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/logs"
                android:textSize="20sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginEnd="5dp"
                android:background="#2ebadc" />
        </LinearLayout>

        <Button
            android:id="@+id/loadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getLog"
            android:text="@string/load_log"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/delButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="delLog"
            android:text="@string/del_log"
            tools:ignore="VisualLintButtonSize" />

        <LinearLayout
            android:id="@+id/titleStart"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="#2ebadc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/neustarts"
                android:textSize="20sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginEnd="5dp"
                android:background="#2ebadc" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/buttonhotstart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="performRestart"
                android:text="@string/hei_start"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttonwarmstart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="performRestart"
                android:text="@string/warmstart"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttoncoldstart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="performRestart"
                android:text="@string/kaltstart"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/titleMeldungen"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="#2ebadc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/meldungen"
                android:textSize="20sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginEnd="5dp"
                android:background="#2ebadc" />
        </LinearLayout>

        <TextView
            android:id="@+id/mainTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="12sp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>